[+] multi image for post club and display only first image in postClub index, and display all image in postClub show

--- a/templates/actualites/actualites-club.html.twig
+++ b/templates/actualites/actualites-club.html.twig
@@ -10,9 +10,9 @@
         {% for post in posts %}
             <div class="row featurette">
                 <div class="col-md-3">
-                    {% if post.image %}
+                    {% if post.images.count %}
                         <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
-                             src="{{ asset('uploads/club/') }}{{ post.image }}" alt="">
+                             src="{{ asset('uploads/club/') }}{{ post.images[0].image }}" alt="">
                     {% endif%}
                 </div>
                 <div class="col-10 col-md-7 text-truncate">
