--- a/templates/acceuil/index.html.twig
+++ b/templates/acceuil/index.html.twig
@@ -57,11 +57,11 @@
                         <div class="carousel-item active">
                             {% if first.images.count and firstType == 'Club' %}
                                 <a href="{{ path('actualites-club_show', {'id': first.id}) }}">
-                                    <img class="img-fluid d-block w-100" src="{{ asset('uploads/club/') }}{{ first.getImages()[0].image }}" alt="">
+                                    <img class="img-fluid d-block w-100" src="{{ asset('uploads/club/') }}{{ first.images[0].image }}" alt="">
                                 </a>
                             {% elseif first.images.count and firstType == 'Natio' %}
                                 <a href="{{ path('actualites-club_show', {'id': first.id}) }}">
-                                    <img class="img-fluid d-block w-100" src="{{ asset('uploads/natio/') }}{{ first.getImages()[0].image }}" alt="">
+                                    <img class="img-fluid d-block w-100" src="{{ asset('uploads/natio/') }}{{ first.images[0].image }}" alt="">
                                 </a>
                             {% else %}
                                 <a href="{{ path('actualites-club_show', {'id': first.id}) }}">
