[+] multi image for post natio and display only first image in accueil and postNatio index, and display all image in postNatio show

--- a/templates/acceuil/index.html.twig
+++ b/templates/acceuil/index.html.twig
@@ -60,13 +60,19 @@
                                     <img class="img-fluid d-block w-100" src="{{ asset('uploads/club/') }}{{ first.images[0].image }}" alt="">
                                 </a>
                             {% elseif first.images.count and firstType == 'Natio' %}
-                                <a href="{{ path('actualites-club_show', {'id': first.id}) }}">
+                                <a href="{{ path('actualites-nationale-internationale_show', {'id': first.id}) }}">
                                     <img class="img-fluid d-block w-100" src="{{ asset('uploads/natio/') }}{{ first.images[0].image }}" alt="">
                                 </a>
                             {% else %}
-                                <a href="{{ path('actualites-club_show', {'id': first.id}) }}">
-                                    <img class="d-block w-100" src="https://dummyimage.com/600x400/8f8f8f/fff" alt="">
-                                </a>
+                                {% if firstType == 'Club' %}
+                                    <a href="{{ path('actualites-club_show', {'id': first.id}) }}">
+                                        <img class="d-block w-100" src="https://dummyimage.com/600x400/8f8f8f/fff" alt="">
+                                    </a>
+                                {% else %}
+                                    <a href="{{ path('actualites-nationale-internationale_show', {'id': first.id}) }}">
+                                        <img class="d-block w-100" src="https://dummyimage.com/600x400/8f8f8f/fff" alt="">
+                                    </a>
+                                {% endif %}
                             {% endif %}
                             <div class="carousel-caption d-none d-md-block">
                                 <h5 class="text-dark">{{ first.title }}</h5>
@@ -78,13 +84,19 @@
                                     <img class="d-block w-100" src="{{ asset('uploads/club/') }}{{ second.getImages()[0].image }}" alt="">
                                 </a>
                             {% elseif second.images.count and secondType == 'Natio' %}
-                                <a href="{{ path('actualites-club_show', {'id': second.id}) }}">
+                                <a href="{{ path('actualites-nationale-internationale_show', {'id': second.id}) }}">
                                     <img class="d-block w-100" src="{{ asset('uploads/natio/') }}{{ second.getImages()[0].image }}" alt="">
                                 </a>
                             {% else %}
-                                <a href="{{ path('actualites-club_show', {'id': second.id}) }}">
-                                    <img class="d-block w-100" src="https://dummyimage.com/600x400/8f8f8f/fff" alt="">
-                                </a>
+                                {% if secondType == 'Club' %}
+                                    <a href="{{ path('actualites-club_show', {'id': first.id}) }}">
+                                        <img class="d-block w-100" src="https://dummyimage.com/600x400/8f8f8f/fff" alt="">
+                                    </a>
+                                {% else %}
+                                    <a href="{{ path('actualites-nationale-internationale_show', {'id': first.id}) }}">
+                                        <img class="d-block w-100" src="https://dummyimage.com/600x400/8f8f8f/fff" alt="">
+                                    </a>
+                                {% endif %}
                             {% endif %}
                             <div class="carousel-caption d-none d-md-block">
                                 <h5 class="text-dark">{{ second.title }}</h5>
@@ -96,13 +108,19 @@
                                     <img class="d-block w-100" src="{{ asset('uploads/club/') }}{{ third.getImages()[0].image }}" alt="">
                                 </a>
                             {% elseif third.images.count and thirdType == 'Natio' %}
-                                <a href="{{ path('actualites-club_show', {'id': third.id}) }}">
+                                <a href="{{ path('actualites-nationale-internationale_show', {'id': third.id}) }}">
                                     <img class="d-block w-100" src="{{ asset('uploads/natio/') }}{{ third.getImages()[0].image }}" alt="">
                                 </a>
                             {% else %}
-                                <a href="{{ path('actualites-club_show', {'id': third.id}) }}">
-                                    <img class="d-block w-100" src="https://dummyimage.com/600x400/8f8f8f/fff" alt="">
-                                </a>
+                                {% if thirdType == 'Club' %}
+                                    <a href="{{ path('actualites-club_show', {'id': first.id}) }}">
+                                        <img class="d-block w-100" src="https://dummyimage.com/600x400/8f8f8f/fff" alt="">
+                                    </a>
+                                {% else %}
+                                    <a href="{{ path('actualites-nationale-internationale_show', {'id': first.id}) }}">
+                                        <img class="d-block w-100" src="https://dummyimage.com/600x400/8f8f8f/fff" alt="">
+                                    </a>
+                                {% endif %}
                             {% endif %}
                             <div class="carousel-caption d-none d-md-block">
                                 <h5 class="text-dark">{{ third.title }}</h5>
@@ -114,13 +132,19 @@
                                     <img class="d-block w-100" src="{{ asset('uploads/club/') }}{{ fourth.getImages()[0].image }}" alt="">
                                 </a>
                             {% elseif fourth.images.count and fourthType == 'Natio' %}
-                                <a href="{{ path('actualites-club_show', {'id': fourth.id}) }}">
+                                <a href="{{ path('actualites-nationale-internationale_show', {'id': fourth.id}) }}">
                                     <img class="d-block w-100" src="{{ asset('uploads/natio/') }}{{ fourth.getImages()[0].image }}" alt="">
                                 </a>
                             {% else %}
-                                <a href="{{ path('actualites-club_show', {'id': fourth.id}) }}">
-                                    <img class="d-block w-100" src="https://dummyimage.com/600x400/8f8f8f/fff" alt="">
-                                </a>
+                                {% if fourthType == 'Club' %}
+                                    <a href="{{ path('actualites-club_show', {'id': first.id}) }}">
+                                        <img class="d-block w-100" src="https://dummyimage.com/600x400/8f8f8f/fff" alt="">
+                                    </a>
+                                {% else %}
+                                    <a href="{{ path('actualites-nationale-internationale_show', {'id': first.id}) }}">
+                                        <img class="d-block w-100" src="https://dummyimage.com/600x400/8f8f8f/fff" alt="">
+                                    </a>
+                                {% endif %}
                             {% endif %}
                             <div class="carousel-caption d-none d-md-block">
                                 <h5 class="text-dark">{{ fourth.title }}</h5>
