--- a/templates/actualites/actualites-nationale-internationale-show.html.twig
+++ b/templates/actualites/actualites-nationale-internationale-show.html.twig
@@ -4,10 +4,37 @@
 
 {% block body %}
     <div class="container">
-        {% if post.image %}
-            <a href="{{ asset('uploads/natio/') }}{{ post.image }}" data-toggle="lightbox">
+        {% if firstImage and post.images.count != 1 %}
+            <div id="carouselPostClub" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#{{ firstImage }}" data-slide-to="0" class="active"></li>
+                    {% for postImage in post.images|slice(1, post.images.count) %}
+                        <li data-target="#{{ postImage.id }}" data-slide-to="{{ postImage.id }}"></li>
+                    {% endfor %}
+                </ol>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img class="img-fluid d-block w-100" src="{{ asset('uploads/natio/') }}{{ firstImage }}" alt="">
+                    </div>
+                    {% for postImage in post.images|slice(1, post.images.count) %}
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="{{ asset('uploads/natio/') }}{{ postImage.image }}" alt="">
+                        </div>
+                    {% endfor %}
+                </div>
+                <a class="carousel-control-prev" href="#carouselPostClub" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselPostClub" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        {% elseif firstImage %}
+            <a href="{{ asset('uploads/natio/') }}{{ firstImage }}" data-toggle="lightbox">
                 <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
-                     src="{{ asset('uploads/natio/') }}{{ post.image }}" alt="">
+                     src="{{ asset('uploads/natio/') }}{{ firstImage }}" alt="">
             </a>
         {% endif %}
         <h1>{{ post.title }}</h1>
