--- a/templates/actualites/actualites-nationale-internationale.html.twig
+++ b/templates/actualites/actualites-nationale-internationale.html.twig
@@ -7,9 +7,9 @@
         {% for post in posts %}
             <div class="row featurette">
                 <div class="col-md-3">
-                    {% if post.image %}
+                    {% if post.images.count %}
                         <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
-                             src="{{ asset('uploads/natio/') }}{{ post.image }}" alt="">
+                             src="{{ asset('uploads/natio/') }}{{ post.images[0].image }}" alt="">
                     {% endif%}
                 </div>
                 <div class="col-10 col-md-7 text-truncate">
