--- a/templates/disciplines/ne-waza.html.twig
+++ b/templates/disciplines/ne-waza.html.twig
@@ -87,6 +87,7 @@
             </div>
             <div class="tab-pane fade" id="adhésion" role="tabpanel" aria-labelledby="adhésion-tab">
                 <h3>Inscription</h3>
+                <a href="{{ path('downloadInscription') }}" target="_blank">Fiche d'inscription</a>
             </div>
         </div>
     </div>
